<resources>
    <string name="app_name">PokeApp</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short"><u>Sign in</u></string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="create_account"><u>Create an account</u></string>
    <string name="remember_me">Remember me</string>
    <string name="login_divider">- or -</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="fragment_register" translatable="false">fragment_register</string>
    <string name="fragment_login" translatable="false">fragment_login</string>
    <string name="login_subtitle"><![CDATA[Wailord, the Whale Pokémon, is surprisingly light for its size: it measures 14.5 meters and weighs 398 kg. According to its dimensions and weight, Wailord would float in the air like a balloon if it existed in the real world]]></string>
    <string name="verification_check_mail">To access the application, please verify your email (remember to check your SPAM folder).</string>
    <string name="verification_button_go_to_pokeapp">Let\'s go to PokeApp</string>


    <string name="login_sign_in">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="login_button_loggin">INICIAR SESIÓN</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_user">Usuario o correo</string>
    <string name="login_error_mail">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 6 caracteres</string>
    <string name="login_footer_unselected">¿Todavía no tienes cuenta?</string>
    <string name="login_footer_selected">Regístrate</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_body">Verifique los datos o vuelva a intentarlo</string>
    <string name="login_error_dialog_negative_action">Cancelar</string>
    <string name="login_error_dialog_positive_action">Reintentar</string>

    <string name="introduction_button_signin">Crear cuenta</string>

    <string name="signin_form_real_name">Nombre completo</string>
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_error_mail">El email no es válido</string>
    <string name="signin_error_nickname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_password">Las 2 contraseñas debes ser iguales</string>
    <string name="signin_footer_unselected">¿Ya tienes cuenta?</string>
    <string name="signin_footer_selected">Inicia sesión</string>
    <string name="signin_error_dialog_title">Ha ocurrido un error</string>
    <string name="signin_error_dialog_body">No hemos podido crear tu cuenta, inténtalo de nuevo más tarde</string>
    <string name="signin_error_dialog_positive_action">Okey :(</string>


    <string name="dialog_success_title">¡Verificación completada!</string>
    <string name="dialog_success_body">Ahora puedes usar la aplicación</string>
    <string name="dialog_success_positive">Continue</string>

    <string name="feature_not_allowed">Feature no solicitada :)</string>
    <string name="signin_button_createaccount">Crear mi cuenta</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="title_activity_pokemon">PokemonActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pokemon_detail">PokemonDetailActivity</string>
    <string name="logout">Sign Out</string>
</resources>