<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterFragment">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/icon"
        android:layout_width="334dp"
        android:layout_height="283dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_progress="60"
        app:lottie_rawRes="@raw/poke_app_animation" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/icon"
        android:layout_marginHorizontal="30sp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:layout_below="@id/email"
        android:layout_marginTop="10sp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30sp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_below="@id/password"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="30sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:backgroundTint="@color/red"
        android:layout_marginTop="50sp"
        android:text="@string/create_account"
        android:textSize="16sp"
        android:layout_marginHorizontal="50sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:autoLink="all"
        />
    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:backgroundTint="@color/white"
        android:text="@string/action_sign_in_short"
        android:layout_marginTop="50sp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/link"
        android:autoLink="all"
        />

</RelativeLayout>